# cpp-sdk

./: CMakeLists.txt
src/: extism.hpp  manifest.cpp  plugin.cpp
